--- a/materialize/index.html
+++ b/materialize/index.html
@@ -11,11 +11,346 @@
   </head>
 
   <body>
-    <div class="card-panel blue accent-2">This is a card panel with a teal lighten-2 class</div>
+    <nav class="nav-extended cyan lighten-4">
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo center"><span class="card-panel teal lighten-2">L</span>ogo</a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <ul id="nav-mobile pink accent-1" class="right hide-on-med-and-down">
+          <li><a href="sass.html">HTML</a></li>
+          <li><a href="badges.html">CSS</a></li>
+          <li><a href="collapsible.html">JavaScript</a></li>
+        </ul>
+      </div>
+      <div class="nav-content cyan">
+        <ul class="tabs tabs-transparent">
+          <li class="tab"><a class="active" href="#test1">Test 1</a></li>
+          <li class="tab"><a href="#test2">Test 2</a></li>
+          <li class="tab"><a href="#test3">Test 3</a></li>
+          <li class="tab"><a href="#test4">Test 4</a></li>
+          <li class="tab"><a href="#test5">Test 5</a></li>
 
-      <h1>HOLA</h1>
+        </ul>
+      </div>
+    </nav>
+  
+    <ul class="sidenav" id="mobile-demo">
+      <li><a href="sass.html">Sass</a></li>
+      <li><a href="badges.html">Components</a></li>
+      <li><a href="collapsible.html">JavaScript</a></li>
+    </ul>
+  
+    <div id="test1" class="col s12 blue">
+      <div class="container red">
+        <h3>Grilla</h3>
+        <div class="row">
+          <div class="col s12 teal">Soy una grilla de 12</div>
+          <div class="col s3 orange">Son segunda grilla</div>
+          <div class="col s4 lime">Son segunda grilla</div>
+          <div class="col s5 green">Son segunda grilla</div>
+          <div class="col s8 yellow">Son segunda grilla</div>
+          <div class="col s6 grey">Son segunda grilla</div>
+          <div class="col s4 cyan">Son segunda grilla</div>
 
+        </div>
+        <div class="row hide-on-med-only">
+          <div class="col s3 offset-s6 orange">Son segunda grilla</div>
+          <div class="col s4 lime">Son segunda grilla</div>
+          <div class="col s5 green">Son segunda grilla</div>
+          <div class="col s8 yellow">Son segunda grilla</div>
+          <div class="col s6 grey">Son segunda grilla</div>
+          <div class="col s4 cyan">Son segunda grilla</div>
+
+        </div>
+
+        <div class="row">
+          <div class="col s12 m12 l12 teal">Soy una grilla de 12</div>
+          <div class="col s12 m6 l3 orange">Son segunda grilla</div>
+          <div class="col s12 m6 l4 lime">Son segunda grilla</div>
+          <div class="col s12 m4 l5 green">Son segunda grilla</div>
+          <div class="col s12 m2 l8 yellow">Son segunda grilla</div>
+          <div class="col s12 m8 l6 grey">Son segunda grilla</div>
+          <div class="col s12 m8 l4 cyan">Son segunda grilla</div>
+
+        </div>
+      </div>
+    </div>
+    <div id="test2" class="col s12">
+      <h3>tabla</h3>
+      <table class="striped">
+        <thead>
+          <tr>
+              <th>Name</th>
+              <th>Item Name</th>
+              <th>Item Price</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>Alvin</td>
+            <td>Eclair</td>
+            <td>$0.87</td>
+          </tr>
+          <tr>
+            <td>Alan</td>
+            <td>Jellybean</td>
+            <td>$3.76</td>
+          </tr>
+          <tr>
+            <td>Jonathan</td>
+            <td>Lollipop</td>
+            <td>$7.00</td>
+          </tr>
+        </tbody>
+      </table>
+            
+      Test 2
+    </div>
+    <div id="test3" class="col s12">
+      <div class="container">
+        <div class="row">
+          <!-- GET es visible en la URL
+          POST es oculto en la URL-->
+          <form class="col s12" action="index.html" method="POST">
+            <div class="row">
+              <div class="input-field col s6">
+                <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+                <label for="first_name">First Name</label>
+              </div>
+              <div class="input-field col s6">
+                <input id="last_name" type="text" class="validate">
+                <label for="last_name">Last Name</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input disabled value="I am not editable" id="disabled" type="text" class="validate">
+                <label for="disabled">Disabled</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="password" type="password" class="validate">
+                <label for="password">Password</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="email" type="email" class="validate">
+                <label for="email">Email</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="number" type="number" class="validate">
+                <label for="number">Numero</label>
+              </div>
+            </div>
+            <div class="row" >
+              <div class="input-field col s12">
+                <input id="date" type="date" class="validate">
+                <label for="date">Fecha</label>
+              </div>
+            </div>
+            <div class="row" >
+              <div class="input-field col s12">
+                <input type="text" class="datepicker">
+                <label for="dateDp">Fecha</label>
+              </div>
+            </div>
+
+            <div class="row" >
+              <div class="input-field col s12">
+                <input type="text" class="timepicker">
+                <label for="time">Hora</label>
+              </div>
+            </div>
+            <div class="row" >
+              <div class="input-field col s12">
+                <input type="text" class="datepicker">
+                <label for="dateDp">Fecha</label>
+              </div>
+            </div>
+
+            <div class="row" >
+              <div class="input-field col s12">
+               <select>
+                <option>Uruguay</option>
+                <option>Argentina</option>
+                <option>Brasil</option>
+                <option>Paraguay</option>
+               </select>
+                <label for="dateDp">Seleccionador</label>
+              </div>
+            </div>
+
+            <div>
+              <label>
+                <input name="group1" value="Rojo" type="radio" checked />
+                <span>Red</span>
+              </label>
+              <label>
+                <input name="group1" value="Amarillo" type="radio" checked />
+                <span>Yellow</span>
+              </label>
+              <label>
+                <input name="group1" value="Verde" type="radio" checked />
+                <span>Green</span>
+              </label>
+            </div>
+            <button class="btn waves-effect waves-light" type="submit" name="action">Enviar
+              <i class="material-icons right">send</i>
+            </button>
+          </form>
+        </div>
+
+      </div>
+      <br>
+      <br><br><br><br><br><br><br><br><br>
+    </div>
+    <div id="test4" class="col s12">
+    <!-- Modal Trigger -->
+    <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
+
+      <!-- Modal Structure -->
+      <div id="modal1" class="modal">
+        <div class="modal-content">
+          <h4>Modal Header</h4>
+          <p>A bunch of text</p>
+          <form class="col s12" action="index.html" method="POST">
+            <div class="row">
+              <div class="input-field col s6">
+                <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+                <label for="first_name">First Name</label>
+              </div>
+              <div class="input-field col s6">
+                <input id="last_name" type="text" class="validate">
+                <label for="last_name">Last Name</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input disabled value="I am not editable" id="disabled" type="text" class="validate">
+                <label for="disabled">Disabled</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="password" type="password" class="validate">
+                <label for="password">Password</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="email" type="email" class="validate">
+                <label for="email">Email</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="number" type="number" class="validate">
+                <label for="number">Numero</label>
+              </div>
+            </div>
+            <div class="row" >
+              <div class="input-field col s12">
+                <input id="date" type="date" class="validate">
+                <label for="date">Fecha</label>
+              </div>
+            </div>
+            <div class="row" >
+              <div class="input-field col s12">
+                <input type="text" class="datepicker">
+                <label for="dateDp">Fecha</label>
+              </div>
+            </div>
+
+            <div class="row" >
+              <div class="input-field col s12">
+                <input type="text" class="timepicker">
+                <label for="time">Hora</label>
+              </div>
+            </div>
+            <div class="row" >
+              <div class="input-field col s12">
+                <input type="text" class="datepicker">
+                <label for="dateDp">Fecha</label>
+              </div>
+            </div>
+
+            <div class="row" >
+              <div class="input-field col s12">
+               <select>
+                <option>Uruguay</option>
+                <option>Argentina</option>
+                <option>Brasil</option>
+                <option>Paraguay</option>
+               </select>
+                <label for="dateDp">Seleccionador</label>
+              </div>
+            </div>
+
+            <div>
+              <label>
+                <input name="group1" value="Rojo" type="radio" checked />
+                <span>Red</span>
+              </label>
+              <label>
+                <input name="group1" value="Amarillo" type="radio" checked />
+                <span>Yellow</span>
+              </label>
+              <label>
+                <input name="group1" value="Verde" type="radio" checked />
+                <span>Green</span>
+              </label>
+            </div>
+            <button class="btn waves-effect waves-light" type="submit" name="action">Enviar
+              <i class="material-icons right">send</i>
+            </button>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+        </div>
+      </div>
+    </div>
+    <div id="test5" class="col s12">
+      Test 5
+    </div>
+    <footer class="page-footer" style="position:fixed;bottom:0;left:0;width:100%;">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Footer Content</h5>
+            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Links</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+        © 2014 Copyright Text
+        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        </div>
+      </div>
+    </footer>
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', function(){
+        M.AutoInit();
+        var elems = document.querySelectorAll('.datepicker');
+        var instances = M.Datepicker.init(elems, options);
+        
+      });
+    </script>
   </body>
 </html>
